--- a/activity13 jan.html
+++ b/activity13 jan.html
@@ -41,8 +41,11 @@
                 <source src="dog barking.mp3" type="audio/mp3">
                 
             </audio>
-            <video src="dog-video.mp4"controls></video>
-            <embedd src="dog-on-bench.gif"></embedd>
+            <video src="dog-video.mp4"controls>
+
+            </video>
+            
+            <embed src="dog-on-bench.gif"/>
         </main>
         <footer>
             <p> contact me at +2345678999</p>
